--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   --tg-theme-bg-color: #efeff3;
   --tg-theme-button-color: #2eaddc;
